--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>382 Tagged Open Ruby Bugs as of 2020-10-16 13:22:28 +0900</title>
+<title>383 Tagged Open Ruby Bugs as of 2020-10-22 06:09:51 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -22,8 +22,8 @@
 <input type="submit" value="regexp" />
 <input type="submit" value="fiber" />
 <input type="submit" value="arm" />
-<input type="submit" value="ractor" />
 <input type="submit" value="aix" />
+<input type="submit" value="ractor" />
 <input type="submit" value="solaris" />
 <input type="submit" value="s390" />
 <input type="submit" value="autoload" />
@@ -43,9 +43,9 @@
 <input type="submit" value="uriencoding" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">382</span> matched)
+(<span id="matched">383</span> matched)
 <table>
-<caption>382 Tagged Open Ruby Bugs as of 2020-10-16 13:22:28 +0900</caption>
+<caption>383 Tagged Open Ruby Bugs as of 2020-10-22 06:09:51 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -54,6 +54,27 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" ext maybenotbug ">
+<td><a href="https://bugs.ruby-lang.org/issues/17276">17276</a>
+</td>
+<td>ext maybenotbug</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17276">Ripper stops tokenizing after keyword as a method parameter</a>
+</td>
+</tr>
+<tr class=" core maybenotbug ">
+<td><a href="https://bugs.ruby-lang.org/issues/17272">17272</a>
+</td>
+<td>core maybenotbug</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17272">Ruby 2.7.2 crash report</a>
+</td>
+</tr>
+<tr class=" ext maybenotbug ">
+<td><a href="https://bugs.ruby-lang.org/issues/17264">17264</a>
+</td>
+<td>ext maybenotbug</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17264">BigDecimal exponentiation cannot be used with #** method</a>
+</td>
+</tr>
 <tr class=" fiber perf ">
 <td><a href="https://bugs.ruby-lang.org/issues/17263">17263</a>
 </td>
@@ -73,13 +94,6 @@
 </td>
 <td>core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17254">ENV.replace may set nil instead of the proper value</a>
-</td>
-</tr>
-<tr class=" ext maybenotbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/17220">17220</a>
-</td>
-<td>ext maybenotbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17220">Rails Active Job integration test fails with Ruby 3.0.0 since 2038cc6cab6ceeffef3ec3a765c70ae684f829ed</a>
 </td>
 </tr>
 <tr class=" core ">
@@ -122,13 +136,6 @@
 </td>
 <td>core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17204">Segmentation fault in 2.7.1p83</a>
-</td>
-</tr>
-<tr class=" ractor ">
-<td><a href="https://bugs.ruby-lang.org/issues/17203">17203</a>
-</td>
-<td>ractor</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17203">Logger::Formatter won&#39;t work with non main Ractor</a>
 </td>
 </tr>
 <tr class=" core ">
