--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>383 Tagged Open Ruby Bugs as of 2020-10-22 06:09:51 +0900</title>
+<title>381 Tagged Open Ruby Bugs as of 2020-10-28 06:18:03 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -18,8 +18,8 @@
 <input type="submit" value="cygwin" />
 <input type="submit" value="tracepoint" />
 <input type="submit" value="perf" />
-<input type="submit" value="refine" />
 <input type="submit" value="regexp" />
+<input type="submit" value="refine" />
 <input type="submit" value="fiber" />
 <input type="submit" value="arm" />
 <input type="submit" value="aix" />
@@ -43,9 +43,9 @@
 <input type="submit" value="uriencoding" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">383</span> matched)
+(<span id="matched">381</span> matched)
 <table>
-<caption>383 Tagged Open Ruby Bugs as of 2020-10-22 06:09:51 +0900</caption>
+<caption>381 Tagged Open Ruby Bugs as of 2020-10-28 06:18:03 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -54,6 +54,20 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/17289">17289</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17289">Time#strftime occurs Segmentation Fault on ruby-2.7.2p137</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/17280">17280</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17280">Dir.glob with FNM_DOTMATCH matches &quot;..&quot; and &quot;.&quot; and results in duplicated entries</a>
+</td>
+</tr>
 <tr class=" ext maybenotbug ">
 <td><a href="https://bugs.ruby-lang.org/issues/17276">17276</a>
 </td>
@@ -724,13 +738,6 @@
 </td>
 <td>ext</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16608">ConditionVariable#wait should return false when timeout exceeded</a>
-</td>
-</tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/16518">16518</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16518">Should we rationalize Rational&#39;s numerator automatically?</a>
 </td>
 </tr>
 <tr class=" ext ">
@@ -1538,13 +1545,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/14046">Ripper loses DATA</a>
 </td>
 </tr>
-<tr class=" refine ">
-<td><a href="https://bugs.ruby-lang.org/issues/14012">14012</a>
-</td>
-<td>refine</td>
-<td><a href="https://bugs.ruby-lang.org/issues/14012">NameError is raised when use class variables in Refinements</a>
-</td>
-</tr>
 <tr class=" cygwin ext ">
 <td><a href="https://bugs.ruby-lang.org/issues/13999">13999</a>
 </td>
@@ -1825,13 +1825,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/12500">TestProcess#test_aspawn_too_long_path fails on mips with &quot;argument too big&quot;</a>
 </td>
 </tr>
-<tr class=" patch core maybenotbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/12485">12485</a>
-</td>
-<td>patch core maybenotbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/12485">Kernel.Rational raises TypeError though given denominator returns 1 by to_int</a>
-</td>
-</tr>
 <tr class=" test ">
 <td><a href="https://bugs.ruby-lang.org/issues/12473">12473</a>
 </td>
@@ -2054,13 +2047,6 @@
 </td>
 <td>core maybenotbug</td>
 <td><a href="https://bugs.ruby-lang.org/issues/11213">defined?(super) ignores respond_to_missing?</a>
-</td>
-</tr>
-<tr class=" core maybenotbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/11202">11202</a>
-</td>
-<td>core maybenotbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/11202">No warning when a link to an original method body was removed</a>
 </td>
 </tr>
 <tr class=" lib ">
