--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>381 Tagged Open Ruby Bugs as of 2020-10-28 06:18:03 +0900</title>
+<title>379 Tagged Open Ruby Bugs as of 2020-11-03 08:46:27 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -43,9 +43,9 @@
 <input type="submit" value="uriencoding" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">381</span> matched)
+(<span id="matched">379</span> matched)
 <table>
-<caption>381 Tagged Open Ruby Bugs as of 2020-10-28 06:18:03 +0900</caption>
+<caption>379 Tagged Open Ruby Bugs as of 2020-11-03 08:46:27 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -54,6 +54,27 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/17304">17304</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17304">Ruby stuck calling sched_yield on fork</a>
+</td>
+</tr>
+<tr class=" tracepoint ">
+<td><a href="https://bugs.ruby-lang.org/issues/17302">17302</a>
+</td>
+<td>tracepoint</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17302">The TracePoint API does not allow setting multiple line traces within the same method (ISEQ)</a>
+</td>
+</tr>
+<tr class=" fiber ">
+<td><a href="https://bugs.ruby-lang.org/issues/17300">17300</a>
+</td>
+<td>fiber</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17300">The Fiber scheduler does not work with ConditionVariable</a>
+</td>
+</tr>
 <tr class=" core ">
 <td><a href="https://bugs.ruby-lang.org/issues/17289">17289</a>
 </td>
@@ -94,20 +115,6 @@
 </td>
 <td>fiber perf</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17263">Fiber context switch degrades with number of fibers, limit on number of fibers</a>
-</td>
-</tr>
-<tr class=" build ">
-<td><a href="https://bugs.ruby-lang.org/issues/17255">17255</a>
-</td>
-<td>build</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17255">Installation failed for ruby version 2.7.1: unknown encoding name: binary (ArgumentError)</a>
-</td>
-</tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/17254">17254</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17254">ENV.replace may set nil instead of the proper value</a>
 </td>
 </tr>
 <tr class=" core ">
@@ -1580,13 +1587,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/13864">Rinda multicast test failures due to missing default route</a>
 </td>
 </tr>
-<tr class=" core ">
-<td><a href="https://bugs.ruby-lang.org/issues/13768">13768</a>
-</td>
-<td>core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/13768">SIGCHLD and Thread dead-lock problem</a>
-</td>
-</tr>
 <tr class=" ext ">
 <td><a href="https://bugs.ruby-lang.org/issues/13754">13754</a>
 </td>
@@ -2301,13 +2301,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/9659">crash in FIPS mode after unchecked algo-&gt;init_func failure</a>
 </td>
 </tr>
-<tr class=" ext ">
-<td><a href="https://bugs.ruby-lang.org/issues/9595">9595</a>
-</td>
-<td>ext</td>
-<td><a href="https://bugs.ruby-lang.org/issues/9595">Float#to_d inconsistent between 2.0.0 and 2.1.1</a>
-</td>
-</tr>
 <tr class=" refine maybenotbug ">
 <td><a href="https://bugs.ruby-lang.org/issues/9580">9580</a>
 </td>
@@ -2327,13 +2320,6 @@
 </td>
 <td>core arm</td>
 <td><a href="https://bugs.ruby-lang.org/issues/9507">Ruby 2.1.0 is broken on ARMv5: tried to create Proc object without a block</a>
-</td>
-</tr>
-<tr class=" patch lib ">
-<td><a href="https://bugs.ruby-lang.org/issues/9459">9459</a>
-</td>
-<td>patch lib</td>
-<td><a href="https://bugs.ruby-lang.org/issues/9459">Net::HTTP initializes openssl library after TCP connection is established</a>
 </td>
 </tr>
 <tr class=" win core ">
