--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>380 Tagged Open Ruby Bugs as of 2020-11-07 05:23:24 +0900</title>
+<title>380 Tagged Open Ruby Bugs as of 2020-11-07 05:25:06 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -26,16 +26,16 @@
 <input type="submit" value="s390" />
 <input type="submit" value="solaris" />
 <input type="submit" value="ractor" />
+<input type="submit" value="autoload" />
 <input type="submit" value="backport" />
-<input type="submit" value="enc" />
 <input type="submit" value="openssl" />
 <input type="submit" value="unfixable" />
-<input type="submit" value="autoload" />
 <input type="submit" value="wip-patch" />
 <input type="submit" value="parser" />
 <input type="submit" value="linux" />
 <input type="submit" value="haiku" />
 <input type="submit" value="mips" />
+<input type="submit" value="enc" />
 <input type="submit" value="uriencoding" />
 <input type="submit" value="misc" />
 <input type="submit" value="jit" />
@@ -44,7 +44,7 @@
 <input id="filter" type="text" size="80" />
 (<span id="matched">380</span> matched)
 <table>
-<caption>380 Tagged Open Ruby Bugs as of 2020-11-07 05:23:24 +0900</caption>
+<caption>380 Tagged Open Ruby Bugs as of 2020-11-07 05:25:06 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -487,10 +487,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/16950">Stop nonsense keyword argument warnings in 2.6</a>
 </td>
 </tr>
-<tr class=" enc ">
+<tr class=" encoding ">
 <td><a href="https://bugs.ruby-lang.org/issues/16927">16927</a>
 </td>
-<td>enc</td>
+<td>encoding</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16927">String#tr won&#39;t return the expected result for some sign with diacritics</a>
 </td>
 </tr>
@@ -543,10 +543,10 @@
 <td><a href="https://bugs.ruby-lang.org/issues/16849">ObjectSpace.trace_object_allocations_stop fails if called before ObjectSpace.trace_object_allocations_start</a>
 </td>
 </tr>
-<tr class=" enc ">
+<tr class=" encoding ">
 <td><a href="https://bugs.ruby-lang.org/issues/16842">16842</a>
 </td>
-<td>enc</td>
+<td>encoding</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16842">`inspect` prints the UTF-8 character U+0085 (NEXT LINE) verbatim even though it is not printable</a>
 </td>
 </tr>
