--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>377 Tagged Open Ruby Bugs as of 2020-11-08 07:08:35 +0900</title>
+<title>376 Tagged Open Ruby Bugs as of 2020-11-15 07:28:18 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -19,8 +19,8 @@
 <input type="submit" value="tracepoint" />
 <input type="submit" value="perf" />
 <input type="submit" value="regexp" />
-<input type="submit" value="fiber" />
 <input type="submit" value="refine" />
+<input type="submit" value="fiber" />
 <input type="submit" value="arm" />
 <input type="submit" value="aix" />
 <input type="submit" value="s390" />
@@ -42,9 +42,9 @@
 <input type="submit" value="doc" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">377</span> matched)
+(<span id="matched">376</span> matched)
 <table>
-<caption>377 Tagged Open Ruby Bugs as of 2020-11-08 07:08:35 +0900</caption>
+<caption>376 Tagged Open Ruby Bugs as of 2020-11-15 07:28:18 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -53,6 +53,13 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" patch core ">
+<td><a href="https://bugs.ruby-lang.org/issues/17321">17321</a>
+</td>
+<td>patch core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/17321">Having a singleton class makes cloning imperfect</a>
+</td>
+</tr>
 <tr class=" encoding ">
 <td><a href="https://bugs.ruby-lang.org/issues/17308">17308</a>
 </td>
@@ -86,13 +93,6 @@
 </td>
 <td>tracepoint</td>
 <td><a href="https://bugs.ruby-lang.org/issues/17302">The TracePoint API does not allow setting multiple line traces within the same method (ISEQ)</a>
-</td>
-</tr>
-<tr class=" fiber ">
-<td><a href="https://bugs.ruby-lang.org/issues/17300">17300</a>
-</td>
-<td>fiber</td>
-<td><a href="https://bugs.ruby-lang.org/issues/17300">The Fiber scheduler does not work with ConditionVariable</a>
 </td>
 </tr>
 <tr class=" core ">
@@ -1304,13 +1304,6 @@
 </td>
 <td>win thread</td>
 <td><a href="https://bugs.ruby-lang.org/issues/14727">TestQueue#test_queue_with_trap always timeout on Windows10</a>
-</td>
-</tr>
-<tr class=" patch core ">
-<td><a href="https://bugs.ruby-lang.org/issues/14726">14726</a>
-</td>
-<td>patch core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/14726">wrong message when superclass is not a Class</a>
 </td>
 </tr>
 <tr class=" ext ">
