--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>376 Tagged Open Ruby Bugs as of 2020-11-15 07:28:18 +0900</title>
+<title>376 Tagged Open Ruby Bugs as of 2020-11-15 07:29:30 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -12,39 +12,39 @@
 <input type="submit" value="ext" />
 <input type="submit" value="maybenotbug" />
 <input type="submit" value="encoding" />
-<input type="submit" value="thread" />
 <input type="submit" value="test" />
+<input type="submit" value="thread" />
 <input type="submit" value="notbug" />
 <input type="submit" value="cygwin" />
 <input type="submit" value="tracepoint" />
 <input type="submit" value="perf" />
 <input type="submit" value="regexp" />
 <input type="submit" value="refine" />
-<input type="submit" value="fiber" />
 <input type="submit" value="arm" />
+<input type="submit" value="fiber" />
 <input type="submit" value="aix" />
+<input type="submit" value="ractor" />
 <input type="submit" value="s390" />
 <input type="submit" value="solaris" />
-<input type="submit" value="ractor" />
 <input type="submit" value="autoload" />
 <input type="submit" value="backport" />
 <input type="submit" value="openssl" />
 <input type="submit" value="unfixable" />
-<input type="submit" value="wip-patch" />
-<input type="submit" value="parser" />
 <input type="submit" value="linux" />
-<input type="submit" value="haiku" />
-<input type="submit" value="mips" />
+<input type="submit" value="parser" />
+<input type="submit" value="wip-patch" />
+<input type="submit" value="doc" />
 <input type="submit" value="enc" />
-<input type="submit" value="uriencoding" />
-<input type="submit" value="misc" />
+<input type="submit" value="haiku" />
 <input type="submit" value="jit" />
-<input type="submit" value="doc" /></p>
+<input type="submit" value="mips" />
+<input type="submit" value="misc" />
+<input type="submit" value="uriencoding" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
 (<span id="matched">376</span> matched)
 <table>
-<caption>376 Tagged Open Ruby Bugs as of 2020-11-15 07:28:18 +0900</caption>
+<caption>376 Tagged Open Ruby Bugs as of 2020-11-15 07:29:30 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
